<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_recipe_overview_scene">

    <ImageView
        android:id="@+id/iv_recipe_image"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ic_recipe_score"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/healthscore"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_recipe_image"
        app:srcCompat="@drawable/ic_health_score" />

    <TextView
        android:id="@+id/tv_recipe_score"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ic_recipe_score"
        app:layout_constraintStart_toEndOf="@+id/ic_recipe_score"
        app:layout_constraintTop_toTopOf="@+id/ic_recipe_score"
        app:layout_constraintVertical_bias="0.583"
        tools:text="10%" />

    <ImageView
        android:id="@+id/ic_recipe_duration"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/duration"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/ic_recipe_score"
        app:layout_constraintStart_toEndOf="@+id/tv_recipe_score"
        app:layout_constraintTop_toTopOf="@+id/ic_recipe_score"
        app:srcCompat="@drawable/ic_timer" />

    <TextView
        android:id="@+id/tv_recipe_duration"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ic_recipe_duration"
        app:layout_constraintStart_toEndOf="@+id/ic_recipe_duration"
        app:layout_constraintTop_toTopOf="@+id/ic_recipe_duration"
        tools:text="40 min" />

    <ImageView
        android:id="@+id/ic_recipe_food_type"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/vegeterian"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/ic_recipe_duration"
        app:layout_constraintStart_toEndOf="@+id/tv_recipe_duration"
        app:layout_constraintTop_toTopOf="@+id/ic_recipe_duration"
        app:srcCompat="@drawable/ic_veg" />

    <TextView
        android:id="@+id/tv_type"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ic_recipe_food_type"
        app:layout_constraintStart_toEndOf="@+id/ic_recipe_food_type"
        app:layout_constraintTop_toTopOf="@+id/ic_recipe_food_type"
        tools:text="non-veg" />

    <ImageView
        android:id="@+id/bt_recipe_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/bookmark"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_recipe_image"
        app:srcCompat="@drawable/ic_favorite_border" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_image"
        app:layout_constraintEnd_toEndOf="@+id/iv_recipe_image"
        app:layout_constraintStart_toStartOf="@+id/iv_recipe_image"
        app:layout_constraintTop_toTopOf="@+id/iv_recipe_image"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_recipe_title"
        style="@style/headingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tv_cuisine_type"
        style="@style/recipeSubHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_recipe_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_title"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/iv_is_gluten"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/gluten_free"
        app:layout_constraintStart_toStartOf="@+id/ic_recipe_score"
        app:layout_constraintTop_toBottomOf="@+id/ic_recipe_score"
        app:srcCompat="@drawable/ic_check_circle" />

    <TextView
        android:id="@+id/tv_gluten"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/gluten_free"
        app:layout_constraintBottom_toBottomOf="@+id/iv_is_gluten"
        app:layout_constraintStart_toEndOf="@+id/iv_is_gluten"
        app:layout_constraintTop_toTopOf="@+id/iv_is_gluten" />

    <ImageView
        android:id="@+id/iv_is_diary_free"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/diary_free"
        app:layout_constraintBottom_toBottomOf="@+id/iv_is_gluten"
        app:layout_constraintStart_toEndOf="@+id/tv_gluten"
        app:layout_constraintTop_toTopOf="@+id/iv_is_gluten"
        app:srcCompat="@drawable/ic_check_circle" />

    <TextView
        android:id="@+id/tv_diary_free"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/diary_free"
        app:layout_constraintBottom_toBottomOf="@+id/iv_is_diary_free"
        app:layout_constraintStart_toEndOf="@+id/iv_is_diary_free"
        app:layout_constraintTop_toTopOf="@+id/iv_is_diary_free" />

    <ImageView
        android:id="@+id/iv_is_vegan"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@+id/iv_is_diary_free"
        app:layout_constraintStart_toEndOf="@+id/tv_diary_free"
        app:layout_constraintTop_toTopOf="@+id/iv_is_diary_free"
        app:srcCompat="@drawable/ic_check_circle" />

    <TextView
        android:id="@+id/tv_vegan"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@+id/iv_is_vegan"
        app:layout_constraintStart_toEndOf="@+id/iv_is_vegan"
        app:layout_constraintTop_toTopOf="@+id/iv_is_vegan" />

    <ImageView
        android:id="@+id/iv_recipe_servings"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/servings"
        app:layout_constraintBottom_toBottomOf="@+id/ic_recipe_food_type"
        app:layout_constraintStart_toEndOf="@+id/tv_type"
        app:layout_constraintTop_toTopOf="@+id/ic_recipe_food_type"
        app:srcCompat="@drawable/ic_servings" />

    <TextView
        android:id="@+id/tv_recipe_servings"
        style="@style/subBodyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_servings"
        app:layout_constraintStart_toEndOf="@+id/iv_recipe_servings"
        app:layout_constraintTop_toTopOf="@+id/iv_recipe_servings"
        tools:text="4 Persons" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_is_gluten">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_desc_heading"
                style="@style/subHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_recipe_description"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_heading"
                tools:text="TextView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_description">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/subBodyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calories"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_tot_kcal"
                    style="@style/subBodyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    tools:text="20 kcal" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/subBodyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.8"
                    android:text="@string/carbs"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_carbs"
                    style="@style/subBodyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/subBodyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.6"
                    android:text="@string/fat"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_fat"
                    style="@style/subBodyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    tools:text="20 g" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/subBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/source"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tv_source_name"
                style="@style/subBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                tools:text="Food Tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>


